force-app/main/default/objects/Time_Entry__c/fields/Amount_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Discounted__c</fullName>
    <label>Amount Discounted</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>