force-app/main/default/objects/Time_Entry__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Automatically populates when Approved is checked</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Charges1</relationshipName>
    <type>Lookup</type>
</CustomField>