force-app/main/default/objects/Time_Entry__c/fields/Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Time__c</fullName>
    <inlineHelpText>Automatically populates when Approved is checked</inlineHelpText>
    <label>Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>