force-app/main/default/objects/Time_Entry__c/fields/Cancel_User_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Cancel_User_Conversion__c</fullName>
    <label>Cancel User (Conversion)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>