force-app/main/default/objects/Time_Entry__c/fields/Canceled_User__c.field-meta.xml
<CustomField>
    <fullName>Canceled_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canceled User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>