force-app/main/default/objects/Time_Entry__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>