force-app/main/default/objects/Time_Entry__c/fields/CreatedBy_Email__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Email__c</fullName>
    <label>CreatedBy Email</label>
    <type>Email</type>
</CustomField>