force-app/main/default/objects/Time_Entry__c/fields/Date_Time_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Canceled__c</fullName>
    <label>Date Time Canceled</label>
    <type>DateTime</type>
</CustomField>