force-app/main/default/objects/Time_Entry__c/fields/Discounted_Rate_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Rate_Per_Unit__c</fullName>
    <label>Discounted Rate Per Unit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>