force-app/main/default/objects/Time_Entry__c/fields/Hours_Formula__c.field-meta.xml
<CustomField>
    <fullName>Hours_Formula__c</fullName>
    <formula>value(text(Hours__c ))+ value(text(Minutes__c))/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>