force-app/main/default/objects/Time_Entry__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>