force-app/main/default/objects/Time_Entry__c/fields/Invoice_Batch_Error__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Batch_Error__c</fullName>
    <label>Invoice Batch Error</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>