force-app/main/default/objects/Time_Entry__c/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <label>Minutes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>