force-app/main/default/objects/Time_Entry__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>