force-app/main/default/objects/Time_Entry__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period</label>
    <referenceTo>Periods__c</referenceTo>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>