force-app/main/default/objects/Time_Entry__c/fields/Product_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Product_Is_Active__c</fullName>
    <formula>Service_Code__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Is Active</label>
    <type>Checkbox</type>
</CustomField>