force-app/main/default/objects/Time_Entry__c/fields/Product_Time_Entry_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Time_Entry_Category__c</fullName>
    <formula>text(Service_Code__r.Time_Entry_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Time Entry Category</label>
    <type>Text</type>
</CustomField>