force-app/main/default/objects/Time_Entry__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Use hour increments: 15 minutes = 0.25, 30 minutes = 0.5, 45 minutes = 0.75</inlineHelpText>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>