force-app/main/default/objects/Time_Entry__c/fields/Receipt_File_ID__c.field-meta.xml
<CustomField>
    <fullName>Receipt_File_ID__c</fullName>
    <label>Receipt File ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>