force-app/main/default/objects/Time_Entry__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>