force-app/main/default/objects/Time_Entry__c/fields/Service_Enrollment_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Service_Enrollment_Mismatch__c</fullName>
    <formula>left(Client__r.Full_Name__c,5)&lt;&gt; left(Service_Enrollment__r.Name ,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Enrollment Mismatch</label>
    <type>Checkbox</type>
</CustomField>