force-app/main/default/objects/Time_Entry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <default>true</default>
                <label>ACTIVE</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>INVOICED</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>