force-app/main/default/objects/Time_Entry__c/fields/Time_Entry_Category__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Category__c</fullName>
    <label>Time Entry Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Entry_Category</valueSetName>
    </valueSet>
</CustomField>