force-app/main/default/objects/Time_Entry__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>