force-app/main/default/objects/Time_Entry__c/fields/Units_Charged__c.field-meta.xml
<CustomField>
    <fullName>Units_Charged__c</fullName>
    <label>Units Charged</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>