force-app/main/default/objects/Time_Entry__c/validationRules/Approval_Restrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Restrictions</fullName>
    <active>true</active>
    <description>Approval Restrictions</description>
    <errorConditionFormula>AND(ISCHANGED(Approved__c), Approved__c = TRUE,
$User.Can_Approve_Invoices__c = FALSE)</errorConditionFormula>
    <errorMessage>Only certain users are authorized to approve Time Entries.</errorMessage>
</ValidationRule>