force-app/main/default/objects/Time_Entry__c/validationRules/Can_Not_Update_if_Approved_or_Invoiced.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Update_if_Approved_or_Invoiced</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ischanged(Quantity__c ),
 ischanged(Unit_Price__c )), OR(Approved__c =True, !isblank(Opportunity_Product__c )))</errorConditionFormula>
    <errorMessage>You can not update a Time Entry that has been Approved or Invoiced.</errorMessage>
</ValidationRule>