force-app/main/default/objects/Time_Entry__c/validationRules/Must_Have_Invoice_To_To_Approve.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Invoice_To_To_Approve</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(isblank(Service_Enrollment__r.Billing_Attention_To__c) ,isblank( text(Service_Enrollment__r.Billing_Invoice_Options__c ))),Approved__c=True,ischanged(Approved__c))</errorConditionFormula>
    <errorMessage>You must have an Attention To on Service Enrollment before Approving Time Entries.</errorMessage>
</ValidationRule>