force-app/main/default/objects/Time_Entry__c/validationRules/Quantity_Can_Not_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Can_Not_Be_Blank</fullName>
    <active>true</active>
    <description>Quantity Can Not Be Blank</description>
    <errorConditionFormula>isblank(Quantity__c)</errorConditionFormula>
    <errorMessage>You must enter a Quantity to save a Time Entry.</errorMessage>
</ValidationRule>