force-app/main/default/objects/Time_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>