force-app/main/default/objects/Time_Entry__c/listViews/Jon_Temp.listView-meta.xml
<ListView>
    <fullName>Jon_Temp</fullName>
    <columns>NAME</columns>
    <columns>Approved__c</columns>
    <columns>Service_Enrollment__c</columns>
    <columns>Service_Code__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Total__c</columns>
    <columns>Non_billable__c</columns>
    <columns>Client__c</columns>
    <columns>Case_Manager__c</columns>
    <columns>Description__c</columns>
    <columns>Approved_By__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Charge_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entry_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Time Entries Missing Service Enrollments</label>
</ListView>