force-app/main/default/objects/Time_Entry__c/listViews/My_Invoiced_Time_Entries_This_Month.listView-meta.xml
<ListView>
    <fullName>My_Invoiced_Time_Entries_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Service_Enrollment__c</columns>
    <columns>Client__c</columns>
    <columns>Approved__c</columns>
    <columns>Approved_By__c</columns>
    <columns>Charge_Date__c</columns>
    <columns>Period__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>INVOICED</value>
    </filters>
    <filters>
        <field>Date_Invoiced__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>My Invoiced Time Entries This Month</label>
</ListView>