force-app/main/default/objects/Time_Entry__c/listViews/My_UnApproved_Time_Entries.listView-meta.xml
<ListView>
    <fullName>My_UnApproved_Time_Entries</fullName>
    <columns>NAME</columns>
    <columns>Approved__c</columns>
    <columns>Service_Enrollment__c</columns>
    <columns>Client__c</columns>
    <columns>Case_Manager__c</columns>
    <columns>Description__c</columns>
    <columns>Approved_By__c</columns>
    <columns>Charge_Date__c</columns>
    <columns>Non_billable__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Total__c</columns>
    <columns>Original_System_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ACTIVE</value>
    </filters>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Entry_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>My UnApproved Time Entries</label>
</ListView>