force-app/main/default/objects/Time_Entry__c/listViews/Time_Entries_to_Check.listView-meta.xml
<ListView>
    <fullName>Time_Entries_to_Check</fullName>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quantity__c</field>
        <operation>notEqual</operation>
        <value>0.25,0.5,0.75,1,1.25,1.5,1.75,2,2.25,2.5,2.75,3.25,3,3.5,4,5,15</value>
    </filters>
    <label>Time Entries to Check</label>
</ListView>